[gd_scene load_steps=7 format=3 uid="uid://do6l3fp8yvpkm"]

[ext_resource type="Script" path="res://hud.gd" id="1_o4v7o"]
[ext_resource type="FontFile" uid="uid://bh61ehiw3h71h" path="res://assets/Kenney Bold.ttf" id="2_8ur8o"]
[ext_resource type="Texture2D" uid="uid://cvn7b7pu8do3" path="res://assets/arrows/Up Square Button.png" id="3_va5m3"]
[ext_resource type="Texture2D" uid="uid://lgqty8ia7tc8" path="res://assets/arrows/Up col_Square Button.png" id="4_pojyu"]

[sub_resource type="LabelSettings" id="LabelSettings_3mvqt"]
font = ExtResource("2_8ur8o")
font_size = 48
shadow_size = 4
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(2, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ecrs8"]
size = Vector2(200, 200)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_o4v7o")

[node name="Message" type="Label" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
text = "Coin Dash!"
label_settings = SubResource("LabelSettings_3mvqt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Score" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_3mvqt")
vertical_alignment = 1

[node name="Time" type="Label" parent="MarginContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_3mvqt")
horizontal_alignment = 2
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -124.0
offset_top = -80.0
offset_right = 124.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_8ur8o")
theme_override_font_sizes/font_size = 48
text = "Start"

[node name="B_Up" type="TouchScreenButton" parent="."]
visible = false
position = Vector2(190, 461)
scale = Vector2(0.53, 0.53)
texture_normal = ExtResource("3_va5m3")
texture_pressed = ExtResource("4_pojyu")
shape = SubResource("RectangleShape2D_ecrs8")

[node name="B_Down" type="TouchScreenButton" parent="."]
visible = false
position = Vector2(295, 671)
rotation = 3.14159
scale = Vector2(0.53, 0.53)
texture_normal = ExtResource("3_va5m3")
texture_pressed = ExtResource("4_pojyu")
shape = SubResource("RectangleShape2D_ecrs8")

[node name="B_Right" type="TouchScreenButton" parent="."]
visible = false
position = Vector2(400, 566)
rotation = 1.5708
scale = Vector2(0.53, 0.53)
texture_normal = ExtResource("3_va5m3")
texture_pressed = ExtResource("4_pojyu")
shape = SubResource("RectangleShape2D_ecrs8")

[node name="B_Left" type="TouchScreenButton" parent="."]
visible = false
position = Vector2(85, 671)
rotation = 4.71239
scale = Vector2(0.53, 0.53)
texture_normal = ExtResource("3_va5m3")
texture_pressed = ExtResource("4_pojyu")
shape = SubResource("RectangleShape2D_ecrs8")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="B_Up" to="." method="_on_b_up_pressed"]
[connection signal="released" from="B_Up" to="." method="_on_b_up_released"]
[connection signal="pressed" from="B_Down" to="." method="_on_b_down_pressed"]
[connection signal="released" from="B_Down" to="." method="_on_b_down_released"]
[connection signal="pressed" from="B_Right" to="." method="_on_b_right_pressed"]
[connection signal="released" from="B_Right" to="." method="_on_b_right_released"]
[connection signal="pressed" from="B_Left" to="." method="_on_b_left_pressed"]
[connection signal="released" from="B_Left" to="." method="_on_b_left_released"]
